Corrected white gap after instagram on utskott pages

--- a/frontend-ups/assets/css/modules/_instagram.scss
+++ b/frontend-ups/assets/css/modules/_instagram.scss
@@ -1,13 +1,10 @@
 .ig-img {
     width: 100%;
     margin: 20px 0%;
-    //float: left;
-    
 }
 
 .ig-flex {
     display: flex;
-
 }
 .ig-container {
     background-color:  #EFEFEF;
@@ -41,14 +38,21 @@
     background: rgba(0,0,0,.75);
 }
 
+@media only screen and (min-width: 480px) {
+    .ig-img {
+        width: 45%;
+        margin-right: 2.5%;
+        margin-left: 2.5%;
+    }
+}
+
 @media only screen and (min-width: 800px) {
     .ig-img {
-        // border-style: dotted;
-        // border-color: red;
         cursor: pointer;
         margin-bottom: 5%;
         width: 21.2%;
         margin-right: 5%;
+        margin-left: 0;
         &:last-child {
             margin-right: 0;
         }
